Closed Bug 1530818 Opened 7 years ago Closed 7 years ago

Crash in [@ trunc | mozilla::Omnijar::InitOne]

Categories

(Core :: Networking: JAR, defect, P1)

x86
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla67
Root Cause ?
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 --- unaffected
firefox67 blocking fixed

People

(Reporter: calixte, Assigned: glandium)

References

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-252eac53-8475-4315-8aa7-7ecb90190226.

Top 10 frames of crashing thread:

0  @0x4e3b080 
1 xul.dll trunc 
2 xul.dll static void mozilla::Omnijar::InitOne xpcom/build/Omnijar.cpp:81
3 xul.dll mozilla::Omnijar::Init xpcom/build/Omnijar.cpp:103
4 xul.dll NS_InitXPCOM2 xpcom/build/XPCOMInit.cpp:405
5 xul.dll nsresult ScopedXPCOMStartup::Initialize toolkit/xre/nsAppRunner.cpp:1366
6 xul.dll int XREMain::XRE_main toolkit/xre/nsAppRunner.cpp:4856
7 xul.dll XRE_main toolkit/xre/nsAppRunner.cpp:4944
8 xul.dll int mozilla::BootstrapImpl::XRE_main toolkit/xre/Bootstrap.cpp:39
9 firefox.exe static int do_main browser/app/nsBrowserApp.cpp:214

There are 40 crashes (from 12 installations) in nightly 67 with buildid 20190226093755.
The pushlog for this build is:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=49b2a4c8be01&tochange=110ea2a7c3d4
and it appears that fix for bug 1529551 could be involved.

Flags: needinfo?(mh+mozilla)

Bug 1529558 would be more plausible, but still unexpected. I'll check a dump with windbg to get more information.

Flags: needinfo?(mh+mozilla)

Hello Mike,

Hope you don't mind I set you as the assignee. Free free to set it back.

Assignee: nobody → mh+mozilla
Priority: -- → P1
Whiteboard: [necko-triaged]
Blocks: 1529558
No longer blocks: 1529551
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/ae89133ff9bd PrefetchVirtualMemory is WINAPI. r=dmajor
Pushed by dluca@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/f66a48e8030e PrefetchVirtualMemory is WINAPI. r=dmajor a=aryx
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

Nightly updates have been unfrozen now that all builds with this fix have successfully completed.

Please specify a root cause for this bug. See :tmaity for more information.

Root Cause: --- → ?

NI for RCA

Flags: needinfo?(mh+mozilla)
Flags: needinfo?(mh+mozilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: