Bug 1530818 - PrefetchVirtualMemory is WINAPI. r=dmajor

Differential Revision: https://phabricator.services.mozilla.com/D21304